tdf#163341 package: fix reading Zip64 produced by stream-write-ods

1. Accept 0xFFFF as nEndDisk/nEndDirDisk - the Zip APPNOTE says that
   values that don't fit into 16 bits SHOULD be 0xFFFF but it doesn't
   prohibit values that do fit (like, uhm, 0) to be written as 0xFFFF

   (regression from commit ca21cc985d57fffe7c834159b17c095206304994)

2. Fix misuse of o3tl::make_unsigned - it requires non-negative value,
   just do signed compare instead

3. Fix bad conversion from pointer to optional in
   ZipFile::readExtraFields() which effectively prevented the offset
   from being read

   (regression from commit efae4fc42d5fe3c0a69757226f38efc10d101194)

Change-Id: Ib5e7776a30834e507b297fb28266b5489d1ab68d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174898
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 279f42fa8b19d4fe81c3bba4c7af21aa8ab135b9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174795
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174911
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit cf87f49f7e9633b6369f2c1c6bb85efb24679212)